[gd_scene load_steps=12 format=2]

[ext_resource path="res://Common/Enemies/BlitzOrb/BlitzOrb.png" type="Texture" id=1]
[ext_resource path="res://Common/Enemies/BlitzOrb/BlitzOrb.gd" type="Script" id=2]
[ext_resource path="res://Common/Enemies/BlitzOrb/Trail.gd" type="Script" id=3]
[ext_resource path="res://Common/HitHurtBox/HitBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Common/HitHurtBox/HurtBox.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "flash"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1.73, 0.58, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1.73, 0.58, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 13.0384

[sub_resource type="CircleShape2D" id=6]
radius = 14.0

[sub_resource type="CircleShape2D" id=5]
radius = 11.0

[sub_resource type="CircleShape2D" id=3]
radius = 800.0

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.515625, 0.490909 ), 0.0983354, 0.0983354, 0, 0, Vector2( 0.984375, 0.809091 ), -0.27013, 0.0, 0, 0 ]

[node name="BlitzOrb" type="KinematicBody2D"]
collision_layer = 512
collision_mask = 512
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/flash = SubResource( 1 )

[node name="DashCoolDown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="HurtBox" parent="." instance=ExtResource( 5 )]
collision_mask = 16

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 6 )

[node name="HitBox" parent="." instance=ExtResource( 4 )]
collision_layer = 512
monitorable = false
damage = 20.0
knock_back_force = 500.0

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 5 )

[node name="AttackRange" type="Area2D" parent="."]
modulate = Color( 1, 1, 1, 0.14902 )
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource( 3 )

[node name="Trail" type="Line2D" parent="."]
visible = false
show_behind_parent = true
points = PoolVector2Array( 346.637, -262.493 )
width_curve = SubResource( 4 )
default_color = Color( 1.5, 0.04, 0.04, 1 )
script = ExtResource( 3 )

[connection signal="timeout" from="DashCoolDown" to="." method="_on_DashCoolDown_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_AttackRange_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_AttackRange_body_exited"]

[editable path="HurtBox"]
[editable path="HitBox"]
